<resources>
    <string name="app_name">Netflix Clone</string>
    <string name="add_profile">Add Profile</string>
    <string name="started_list_item_title">Kids</string>
    <string name="citation">Citation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="tell_friends_about_netflix">Tell friends about Netflix.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit quam dui, vivamus bibendum ut. A morbi mi tortor ut felis non accumsan accumsan quis. Massa,</string>
    <string name="terms_conditions"> <u>Terms &amp; Conditions</u>
    </string>
    <string name="copy_link">Copy Link</string>
    <string name="my_list">My List</string>
    <string name="app_settings">App Settings</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
</resources>